# mdfr-rppgfau

./: README.md  env.sh  evaluate.py  evaluate_fau.py  evaluate_rppg.py  load.py  pyproject.toml
docs/: architecture.drawio  architecture.md
lightning_logs/version_10/: events.out.tfevents.1771105490.yatskov-makarov-until-27.2931122.0  hparams.yaml
lightning_logs/version_628/: events.out.tfevents.1774085683.aichem.2256926.0  hparams.yaml
scripts/: convert_deepfakeson_phys.py
src/: eval.py  train.py  train_fau.py  train_rppg.py
src/backbones/: __init__.py  pos.py  rppg_encoder.py
src/backbones_df/: __init__.py  fau_df.py  rppg_df.py
src/data/: dataset.py  meta_dataset.py  processor.py  split.py  transforms.py
src/experiments/: base_config.yml  fau_config.yml  meta_config.yml  rppg_config.yml
src/loss/: aux_supervised.py  contrastive.py
src/models/: fau_classifier.py  fau_lightning.py  rppg_classifier.py  rppg_lightning.py  rppg_p_fau.py  rppg_p_fau_df.py  rppg_p_fau_df_lightning.py  rppg_p_fau_lightning.py  rppg_p_fau_maedec.py  rppg_p_fau_p_vmae.py
