[project]
name = "deepfake-multimodal-recognition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    'torch',
    'torchvision',
    'torchaudio',
    'transformers',
    'torchao',
    'datasets',
    'pandas',
    'timm',
    "py-feat>=0.6.1",
    "numpy<2",
    "scipy<1.12",
    "torchcodec>=0.9.1",
    "protobuf>=6.33.2",
    "peft>=0.18.0",
    "gdown>=5.2.1",
    "typer>=0.21.1",
    "lightning>=2.6.1",
    "opencv-python>=4.11.0.86",
    "omegaconf>=2.3.0",
    "python-dotenv>=1.2.1",
    "tensorboard>=2.20.0",
    "facenet-pytorch>=2.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
